--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ theme = "LoveIt"
 
 # website title
 # 网站标题
-title = "LoveIt"
+title = "TommyLike Blog"
 
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 # 设置默认的语言 ["en", "zh-cn", "fr", "pl", ...]
@@ -23,7 +23,7 @@ hasCJKLanguage = false
 paginate = 12
 # google analytics code [UA-XXXXXXXX-X]
 # 谷歌分析代号 [UA-XXXXXXXX-X]
-googleAnalytics = ""
+googleAnalytics = "G-Q2S26C4BZ7"
 # copyright description used only for seo schema
 # 版权描述，仅仅用于 SEO
 copyright = ""
@@ -45,9 +45,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # Author config
 # 作者配置
 [author]
-name = "xxxx"
-email = ""
-link = ""
+name = "TommyLike"
+email = "tommylikehu@gmail.com"
+link = "https://github.com/TommyLike"
 
 # Menu config
 # 菜单配置
@@ -89,7 +89,7 @@ title = ""
 defaultTheme = "auto"
 # public git repo url only then enableGitInfo is true
 # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
-gitRepo = "https://github.com/dillonzq/LoveIt"
+gitRepo = "https://github.com/TommyLike/tommylike.cn"
 # which hash function used for SRI, when empty, no SRI is used
 # ["sha256", "sha384", "sha512", "md5"]
 # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
@@ -100,13 +100,13 @@ fingerprint = ""
 dateFormat = "2006-01-02"
 # website title for Open Graph and Twitter Cards
 # 网站标题, 用于 Open Graph 和 Twitter Cards
-title = "LoveIt"
+title = "TommyLike"
 # website description for RSS, SEO, Open Graph and Twitter Cards
 # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-description = "Hugo theme - LoveIt"
+description = "Open Source developer on OpenStack and Kubernetes"
 # website images for Open Graph and Twitter Cards
 # 网站图片, 用于 Open Graph 和 Twitter Cards
-images = ["/logo.png"]
+images = ["/images/tommylike-cartoon.png"]
 
 # Header config
 # 页面头部导航栏配置
@@ -125,7 +125,7 @@ mobileMode = "auto"
 logo = ""
 # title name
 # 标题名称
-name = "LoveIt"
+name = "Lifelong Learning"
 # you can add extra information before the name (HTML format is supported), such as icons
 # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
 pre = "<i class='far fa-kiss-wink-heart fa-fw' aria-hidden='true'></i>"
@@ -145,7 +145,7 @@ enable = true
 custom = ""
 # whether to show Hugo and theme info
 # 是否显示 Hugo 和主题信息
-hugo = true
+hugo = false
 # whether to show copyright info
 # 是否显示版权信息
 copyright = true
@@ -154,7 +154,7 @@ copyright = true
 author = true
 # site creation time
 # 网站创立年份
-since = 2019
+since = 2023
 # ICP info only in China (HTML format is supported)
 # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
 icp = ""
@@ -193,7 +193,7 @@ rss = 10
 [params.app]
 # optional site title override for the app when added to an iOS home screen or Android launcher
 # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-title = "LoveIt"
+title = "TommyLike"
 # whether to omit favicon resource links
 # 是否隐藏网站图标资源链接
 noFavicon = false
@@ -255,13 +255,13 @@ enable = true
 gravatarEmail = ""
 # URL of avatar shown in home page
 # 主页显示头像的 URL
-avatarURL = "/images/avatar.png"
+avatarURL = "https://s.gravatar.com/avatar/b342014f4772fb9bc0f0577ef9c2f937?s=80"
 # title shown in home page (HTML format is supported)
 # 主页显示的网站标题 (支持 HTML 格式)
-title = ""
+title = "TommyLike"
 # subtitle shown in home page (HTML format is supported)
 # 主页显示的网站副标题 (允许 HTML 格式)
-subtitle = "A Clean, Elegant but Advanced Hugo Theme"
+subtitle = "Open Source developer on OpenStack and Kubernetes"
 # whether to use typeit animation for subtitle
 # 是否为副标题显示打字机动画
 typeit = true
@@ -601,8 +601,8 @@ images = []
 # Publisher info
 # 出版者信息
 [params.page.seo.publisher]
-name = "xxxx"
-logoUrl = "/images/avatar.png"
+name = "TommyLike"
+logoUrl = "https://s.gravatar.com/avatar/b342014f4772fb9bc0f0577ef9c2f937?s=80"
 
 # TypeIt config
 # TypeIt 配置
@@ -634,10 +634,10 @@ baidu = ""
 [params.seo]
 # image URL
 # 图片 URL
-image = "/images/Apple-Devices-Preview.png"
+image = ""
 # thumbnail URL
 # 缩略图 URL
-thumbnailUrl = "/images/screenshot.png"
+thumbnailUrl = ""
 
 # Analytics config
 # 网站分析配置
@@ -751,7 +751,6 @@ posts = ":filename"
 # privacy of the Google Analytics (replaced by params.analytics.google)
 # Google Analytics 相关隐私 (被 params.analytics.google 替代)
 [privacy.googleAnalytics]
-# ...
 [privacy.twitter]
 enableDNT = true
 [privacy.youtube]
@@ -814,14 +813,6 @@ name = "Categories"
 url = "/categories/"
 title = ""
 [[languages.en.menu.main]]
-weight = 4
-identifier = "documentation"
-pre = ""
-post = ""
-name = "Docs"
-url = "/categories/documentation/"
-title = ""
-[[languages.en.menu.main]]
 weight = 5
 identifier = "about"
 pre = ""
@@ -835,7 +826,7 @@ identifier = "github"
 pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
 post = ""
 name = ""
-url = "https://github.com/dillonzq/LoveIt"
+url = "https://github.com/TommyLike/tommylike.cn"
 title = "GitHub"
 [languages.en.params]
 [languages.en.params.search]
@@ -847,124 +838,19 @@ maxResultLength = 10
 snippetLength = 30
 highlightTag = "em"
 absoluteURL = false
-[languages.en.params.search.algolia]
-index = "index.en"
-appID = "PASDMWALPK"
-searchKey = "b42948e51daaa93df92381c8e2ac0f93"
 [languages.en.params.home]
 rss = 10
 [languages.en.params.home.profile]
 enable = true
 gravatarEmail = ""
-avatarURL = "/images/avatar.png"
-title = ""
-subtitle = "A Clean, Elegant but Advanced Hugo Theme"
+avatarURL = "/images/tommylike-cartoon.png"
+title = "TommyLike"
+subtitle = "Open Source developer on OpenStack and Kubernetes"
 typeit = true
 social = true
 disclaimer = ""
 [languages.en.params.social]
-GitHub = "xxxx"
-Twitter = "xxxx"
-Instagram = "xxxx"
-Facebook = "xxxx"
-Telegram = "xxxx"
-Youtubelegacy = "xxxx"
-Phone = "555-555-555"
-Email = "xxxx@xxxx.com"
-RSS = true
-[languages.en.params.social.Mastodon]
-id = "@xxxx"
-prefix = "https://mastodon.technology/"
-
-[languages.zh-cn]
-weight = 2
-languageCode = "zh-CN"
-languageName = "简体中文"
-hasCJKLanguage = true
-copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-[languages.zh-cn.menu]
-[[languages.zh-cn.menu.main]]
-weight = 1
-identifier = "posts"
-pre = ""
-post = ""
-name = "所有文章"
-url = "/posts/"
-title = ""
-[[languages.zh-cn.menu.main]]
-weight = 2
-identifier = "tags"
-pre = ""
-post = ""
-name = "标签"
-url = "/tags/"
-title = ""
-[[languages.zh-cn.menu.main]]
-weight = 3
-identifier = "categories"
-pre = ""
-post = ""
-name = "分类"
-url = "/categories/"
-title = ""
-[[languages.zh-cn.menu.main]]
-weight = 4
-identifier = "documentation"
-pre = ""
-name = "文档"
-url = "/categories/documentation/"
-title = ""
-[[languages.zh-cn.menu.main]]
-weight = 5
-identifier = "about"
-pre = ""
-post = ""
-name = "关于"
-url = "/about/"
-title = ""
-[[languages.zh-cn.menu.main]]
-weight = 6
-identifier = "github"
-pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
-post = ""
-name = ""
-url = "https://github.com/dillonzq/LoveIt"
-title = "GitHub"
-[languages.zh-cn.params]
-[languages.zh-cn.params.search]
-enable = true
-type = "algolia"
-contentLength = 4000
-placeholder = ""
-maxResultLength = 10
-snippetLength = 50
-highlightTag = "em"
-absoluteURL = false
-[languages.zh-cn.params.search.algolia]
-index = "index.zh-cn"
-appID = "PASDMWALPK"
-searchKey = "b42948e51daaa93df92381c8e2ac0f93"
-[languages.zh-cn.params.home]
-rss = 10
-[languages.zh-cn.params.home.profile]
-enable = true
-gravatarEmail = ""
-avatarURL = "/images/avatar.png"
-title = ""
-subtitle = "一个简洁、优雅且高效的 Hugo 主题"
-typeit = true
-social = true
-disclaimer = ""
-[languages.zh-cn.params.social]
-GitHub = "xxxx"
-Weibo = "xxxx"
-Steam = "xxxx"
-Zhihu = "xxxx"
-Douban = "xxxx"
-Devto = "xxxx"
-Bilibili = "xxxx"
-Email = "xxxx@xxxx.com"
-Phone = "555-555-555"
-RSS = true
+GitHub = "TommyLike"
+Email = "tommylikehu@gmail.com"
 
 
